2017-06-15  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Simplify popping up a toolbar's context menu, and make icons
	visible after changing style

	* src/toolbar-factory.c
	  (tm_populate): set the toolbar style before showing-all;
	  (tm_changed_cb): tm_set_style is redundant and has been removed;
	  (tm_popup_context_menu_cb): new callback for
	    "popup-context-menu" signal;
	  (balsa_toolbar_new): no need to connect to "realized" signal;
	    connect to GtkToolbar's "popup-context-menu" signal instead of
	    GtkWidget's "button-press-event" and "popup-menu" signals.

2017-06-14  Albrecht Dreß

	Use John Jack's new icons for "mail-queue" and
	"balsa-send-queued" actions

	* images/16x16/Makefile.am: add the file names.
	* images/24x24/Makefile.am: ditto.
	* src/balsa-icons.c (balsa_register_pixmaps): use them.
	* src/balsa-icons.h: ditto.
	* src/main-window.c: ditto.
	* src/sendmsg-window.c: ditto.
	* src/toolbar-factory.c: ditto.

2017-06-13  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/filter-run-dialog.c (balsa_filter_run_dialog_new): build
	with gtk version < 3.12.

2017-06-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use a wrapper for an environment variable

	* src/filter-run-dialog.c (balsa_filter_run_dialog_new): use
	  libbalsa_dialog_flags() instead of directly checking the
	  BALSA_DIALOG_HEADERBAR environment variable.

2017-06-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove obsolete reference in configure summary

	* configure.ac: $install_mimeicons was removed in commit
	4400b65d2325e0446cbc45bcf0c250476c8caea7.

2017-06-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Recent pref-manager changes break display

	* src/pref-manager.c (open_preferences_manager): put a
	horizontal box in the dialog's content area, instead of making
	the content area horizontal.

2017-05-31  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Code cleanup

	* src/pref-manager.c (option_menu_cb), (pgdown_modified_cb):