@@ -1040,7 +1040,7 @@ tree_button_press_cb(GtkWidget * widget, GdkEventButton * event,
 
     g_return_val_if_fail(bm, FALSE);
     g_return_val_if_fail(event, FALSE);
-    if (event->type != GDK_BUTTON_PRESS || event->button != 3
+    if (!gdk_event_triggers_context_menu((GdkEvent *) event)
         || event->window != gtk_tree_view_get_bin_window(tree_view))
         return FALSE;
 
