@@ -1,5 +1,17 @@
 2017-06-15  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
+	Use gdk_event_triggers_context_menu instead of checking event
+	type and button
+
+	* src/balsa-index.c (bndx_button_event_press_cb):
+	* src/balsa-mblist.c (bmbl_button_press_cb):
+	* src/balsa-message.c (tree_button_press_cb):
+	* src/balsa-mime-widget-image.c (balsa_image_button_press_cb):
+	* src/balsa-mime-widget-text.c (balsa_gtk_html_button_press_cb):
+	* src/sendmsg-window.c (attachment_button_press_cb):
+
+2017-06-15  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
 	Simplify popping up a toolbar's context menu, and make icons
 	visible after changing style
 
